--- a/src/styles/partials/_carousel.scss
+++ b/src/styles/partials/_carousel.scss
@@ -69,12 +69,21 @@ $slideHeight: 200;
     overflow: visible;
     // opacity: 0.4;
     perspective: 1000px;
-    visibility: hidden;
+    opacity: 0;
+
+    * {
+      visibility: visible !important;
+    }
 
     svg {
       transition: 0.6s ease;
       position: relative;
       left: 0;
+      visibility: visible !important;
+
+      image {
+        visibility: visible !important;
+      }
     }
 
     &.middle {
@@ -170,18 +179,6 @@ $slideHeight: 200;
     margin: 0;
     padding: 0;
   }
-
-  .carousel--arrow {
-    width: 40px;
-    height: 40px;
-    border: none;
-    padding: none;
-    background: $color--gray-one;
-    box-shadow: $shadow--one;
-    color: $color--pink;
-    margin-right: 0.5rem;
-    margin-bottom: 1rem;
-  }
 }
 
 .carousel__buttons {
@@ -208,7 +205,7 @@ $slideHeight: 200;
   border-radius: 999px;
   font-size: 14px;
   text-transform: uppercase;
-  background: $color--pink;
+  background: #444;
   color: white;
   min-width: 108px;
   text-align: center;
@@ -221,6 +218,6 @@ $slideHeight: 200;
   font-weight: 500;
   font-size: 28px;
   margin: 0px 12px;
-  color: $color--pink;
+  color: #444444;
   cursor: pointer;
 }
