--- a/src/styles/partials/pages/_home.scss
+++ b/src/styles/partials/pages/_home.scss
@@ -469,4 +469,39 @@
       margin-bottom: 3rem;
     }
   }
+
+  .footer {
+    background: #444444;
+    color: white;
+    padding: 2rem 0;
+
+    .container {
+      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+
+      @include media-breakpoint-up(md) {
+        flex-direction: row;
+      }
+
+      img {
+        width: 64px;
+        height: 64px;
+
+        @include media-breakpoint-up(md) {
+          margin-right: 1rem;
+        }
+
+        filter: grayscale(100%) brightness(1.3);
+      }
+
+      p,
+      a {
+        color: white;
+        margin: 0;
+      }
+    }
+  }
 }
