--- a/src/styles/partials/pages/_themes.scss
+++ b/src/styles/partials/pages/_themes.scss
@@ -44,29 +44,49 @@
       button {
         border-radius: 0;
         border: 1px solid #e8e8e8;
-        border-left: none;
+        border-top: none;
         padding: 12px 16px;
         text-transform: uppercase;
         background: #ffffff;
         // font-weight: bold;
         font-family: "Rubik";
+        outline: none !important;
+        margin: 0 !important;
+        width: 100%;
+        display: block;
+
+        &:first-of-type {
+          border-top-left-radius: 6px;
+          border-top-right-radius: 6px;
+          border-top: 1px solid #e8e8e8;
+        }
+
+        &:last-of-type {
+          border-bottom-left-radius: 6px;
+          border-bottom-right-radius: 6px;
+        }
+
+        @include media-breakpoint-up(xs) {
+          border: 1px solid #e8e8e8;
+          border-left: none;
+
+          &:first-of-type {
+            border-top-left-radius: 6px;
+            border-bottom-left-radius: 6px;
+            border-left: 1px solid #e8e8e8;
+          }
+
+          &:last-of-type {
+            border-top-right-radius: 6px;
+            border-bottom-right-radius: 6px;
+          }
+        }
 
         &.active {
           box-shadow: 1px 1px 16px -4px #09691e41;
           background: $color--pink;
           color: white;
           border-color: $color--pink;
-        }
-
-        &:first-of-type {
-          border-top-left-radius: 6px;
-          border-bottom-left-radius: 6px;
-          border-left: 1px solid #e8e8e8;
-        }
-
-        &:last-of-type {
-          border-top-right-radius: 6px;
-          border-bottom-right-radius: 6px;
         }
       }
     }
