--- a/src/styles/partials/_collapse.scss
+++ b/src/styles/partials/_collapse.scss
@@ -42,7 +42,7 @@
       margin: 0;
       padding-left: 2rem;
       margin: 0;
-      font-size: 1rem;
+      // font-size: 1rem;
       line-height: 1rem;
       padding-right: 2rem;
       padding-bottom: 1.5rem;
