--- a/src/styles/partials/pages/_home.scss
+++ b/src/styles/partials/pages/_home.scss
@@ -131,7 +131,8 @@
       margin-bottom: 3rem;
     }
 
-    [class*="col-"]:first-child, [class*="col-"]:nth-child(2) {
+    [class*="col-"]:first-child,
+    [class*="col-"]:nth-child(2) {
       padding-bottom: 36px !important;
     }
 
@@ -483,33 +484,69 @@
     color: white;
     padding: 2rem 0;
 
-    .container {
-      color: white;
+    .flex {
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
       align-items: center;
 
       @include media-breakpoint-up(md) {
-        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-start;
       }
 
-      img {
-        width: 64px;
-        height: 64px;
-
-        @include media-breakpoint-up(md) {
-          margin-right: 1rem;
+      .flex {
+        @include media-breakpoint-up(sm) {
+          flex-direction: row;
+          justify-content: flex-start;
+          align-items: flex-start;
         }
-
-        filter: grayscale(100%) brightness(1.3);
       }
+    }
 
-      p,
-      a {
-        color: white;
-        margin: 0;
+    .menu {
+      display: flex;
+      flex-direction: column;
+
+      @include media-breakpoint-up(sm) {
+        align-items: flex-start;
+        justify-content: flex-start;
+        margin-right: 3rem;
       }
+    }
+
+    img {
+      height: 64px;
+      width: 64px;
+      filter: grayscale(100%) brightness(1.3);
+      margin-bottom: 1rem;
+    }
+
+    h2 {
+      font-size: 24px;
+      color: white;
+      margin-top: 0;
+      margin-bottom: 0.4rem;
+    }
+
+    h3 {
+      color: white;
+      margin-top: 0;
+      margin-bottom: 1rem;
+      font-size: 16px;
+    }
+
+    p {
+      color: #ffffffaa;
+      margin-top: 0;
+      font-size: 0.9rem;
+    }
+
+    a {
+      color: #ffffffaa;
+      font-size: 0.9rem;
+      margin-bottom: 8px;
+      display: block;
+      text-decoration: none;
     }
   }
 }
