--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -2,88 +2,94 @@
 @use "breakpoints" as *;
 
 footer.footer {
-  background: var(--color--background-secondary);
-  transition: background .3s;
+  padding: 120px 0;
+  background: linear-gradient(180deg, #040d2f, #041242);
+  position: relative;
+  overflow: visible;
 
-  .footer__flex {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  .container {
+    position: relative;
+    z-index: 9;
+  }
 
-    @include media-breakpoint-up(md) {
-      flex-direction: row;
-      align-items: flex-start;
-      justify-content: flex-start;
+  &:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    background: url("/media/img/backgrounds/pyramid.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center top;
+    overflow: visible;
+
+    @include media-breakpoint-up(lg) {
+      background-position: top left;
+    }
+  }
+
+  .footer__left {
+    margin-bottom: 3rem;
+
+    @include media-breakpoint-up(lg) {
+      margin: 0;
+    }
+  }
+
+  .footer__menu {
+    max-width: 120px;
+    margin-bottom: 4rem;
+    width: 50%;
+
+    @include media-breakpoint-up(sm) {
+      margin-right: 60px;
+      margin-bottom: 0;
+      width: 33.33%;
+    }
+    @include media-breakpoint-up(lg) {
+      margin-right: 130px;
     }
 
-    .footer__left {
-      text-align: center;
-      margin-bottom: 3rem;
+    &:last-child {
+      margin-right: 0;
+    }
 
-      @include media-breakpoint-up(md) {
-        text-align: left;
-        margin-bottom: 0;
-        margin-right: 3rem;
-      }
+    h3 {
+      font-size: 24px;
+      line-height: 30px;
+      margin-bottom: 34px;
+      position: relative;
 
-      img {
-        filter: var(--filter);
-        margin-bottom: 1.6rem;
-      }
-
-      small {
-        font-size: 1rem;
-        line-height: 1rem;
+      &:after {
+        width: 26px;
+        height: 2px;
+        content: "";
         display: block;
-        margin: 0;
+        position: absolute;
+        bottom: -12px;
+        left: 0;
+        background: $color--primary;
       }
     }
 
-    .footer__center {
-      text-align: center;
-      margin-bottom: 3rem;
+    a {
+      margin-bottom: 30px;
+      font-family: "Rubik", "Arial";
+      font-size: 1rem;
+      line-height: 30px;
+      text-decoration: none;
+      color: white;
+      display: block;
 
-      @include media-breakpoint-up(md) {
-        text-align: left;
+      &:hover {
+        color: $color--primary;
+      }
+
+      &:last-child {
         margin-bottom: 0;
-      }
-
-      p {
-        margin: 0;
-        font-size: 1rem;
-        // margin-bottom: 1rem;
-        line-height: 2rem;
-      }
-    }
-
-    .footer__right {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      @include media-breakpoint-up(md) {
-        margin-left: auto;
-      }
-
-      a {
-        width: 46px;
-        height: 46px;
-        border-radius: 999px;
-        background: $color--purple;
-        margin: 0 14px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: 0.1s;
-
-        &:hover {
-          background: $color--purple-dark;
-        }
-
-        img {
-          width: 24px;
-          height: 24px;
-        }
       }
     }
   }
