--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -2,95 +2,12 @@
 @use "breakpoints" as *;
 
 footer.footer {
-  padding: 120px 0;
-  background: linear-gradient(180deg, #040d2f, #041242);
-  position: relative;
-  overflow: visible;
+  background: #444444;
+  padding: 1.2rem 0;
 
-  .container {
-    position: relative;
-    z-index: 9;
-  }
-
-  &:after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    display: block;
-    top: 0;
-    left: 0;
-    background: url("/media/img/backgrounds/pyramid.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center top;
-    overflow: visible;
-
-    @include media-breakpoint-up(lg) {
-      background-position: top left;
-    }
-  }
-
-  .footer__left {
-    margin-bottom: 3rem;
-
-    @include media-breakpoint-up(lg) {
-      margin: 0;
-    }
-  }
-
-  .footer__menu {
-    max-width: 120px;
-    margin-bottom: 4rem;
-    width: 50%;
-
-    @include media-breakpoint-up(sm) {
-      margin-right: 60px;
-      margin-bottom: 0;
-      width: 33.33%;
-    }
-    @include media-breakpoint-up(lg) {
-      margin-right: 130px;
-    }
-
-    &:last-child {
-      margin-right: 0;
-    }
-
-    h3 {
-      font-size: 24px;
-      line-height: 30px;
-      margin-bottom: 34px;
-      position: relative;
-
-      &:after {
-        width: 26px;
-        height: 2px;
-        content: "";
-        display: block;
-        position: absolute;
-        bottom: -12px;
-        left: 0;
-        background: $color--primary;
-      }
-    }
-
-    a {
-      margin-bottom: 30px;
-      font-family: "Rubik", "Arial";
-      font-size: 1rem;
-      line-height: 30px;
-      text-decoration: none;
-      color: white;
-      display: block;
-
-      &:hover {
-        color: $color--primary;
-      }
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
+  p {
+    color: white;
+    font-size: 16px;
+    margin: 0;
   }
 }
