--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -10,4 +10,10 @@ footer.footer {
     font-size: 16px;
     margin: 0;
   }
+
+  a {
+    color: white;
+    font-size: 16px;
+    text-decoration: underline;
+  }
 }
