--- a/src/styles/partials/pages/_home.scss
+++ b/src/styles/partials/pages/_home.scss
@@ -66,19 +66,19 @@
       line-height: 76px;
       margin-bottom: 2rem;
       -webkit-box-decoration-break: clone;
+    }
 
-      span {
-        font-family: inherit;
-        font-weight: inherit;
-        font-size: inherit;
-        color: $color--orange;
-        display: inline;
+    h1 span {
+      font-family: inherit;
+      font-weight: inherit;
+      font-size: inherit;
+      color: $color--orange;
+      display: inline;
 
-        background: linear-gradient(to bottom right, $color--pink, $color--orange);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        -webkit-box-decoration-break: clone;
-      }
+      background: linear-gradient(to bottom right, $color--pink, $color--orange);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      -webkit-box-decoration-break: clone;
     }
 
     .image__wrapper {
@@ -164,7 +164,7 @@
   }
 
   .themes {
-    background:linear-gradient($color--gray-one, #ffffff);
+    background: linear-gradient($color--gray-one, #ffffff);
   }
 
   .video {
